# learn-google-genai

./: .gitignore  AGENTS.md  CLAUDE.md  PRD.md  README.md  progress.txt  ralph.md  ralph.sh  ralph_codex.sh
.claude/: settings.json  settings.local.json
.claude/rules/: code-style.md  git-workflow.md  testing.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh
.devcontainer/config/: .tmux.conf
app/: .env.example  README.md  config.py  logging_config.py  main.py  main_judge.py  main_refine.py  pyproject.toml  pytest.ini  ruff.toml
app/data/: movies.csv  movies_test.csv  movies_test3.csv
app/data/llm_judge/output/: direct_assessment_results.json
app/llm_judge/: __init__.py  direct_assessment.py  models.py  pairwise_comparison.py  prompts.py  sample_data.py  self_refinement.py
app/movie_metadata/: __init__.py  csv_reader.py  evaluator.py  genai_client.py  improvement_proposer.py  json_writer.py  metadata_fetcher.py  metadata_service.py  models.py  prompts.py  refinement_writer.py  refiner.py
app/plans/: declarative-questing-wombat.md
app/tests/: conftest.py  test_config.py  test_csv_reader.py  test_evaluator.py  test_genai_client.py  test_improvement_proposer.py  test_json_writer.py  test_main_refine.py  test_metadata_fetcher.py  test_metadata_service.py  test_models.py  test_prompts.py  test_refinement_writer.py  test_refiner.py
docs/: llm_as_judge_plan.md  llm_judge_libraries.md
plans/: flickering-twirling-rocket.md  indexed-bubbling-planet.md  quirky-crunching-bee.md  sleepy-drifting-lemur.md
(+6 files in other folders)
